phaser3のサンプルに合わせて一部変更

--- a/example/v2/v2webgl.html
+++ b/example/v2/v2webgl.html
@@ -10,7 +10,7 @@ body { margin: 0; padding: 0; color: #eee; background: #111; }
 <title>Phaser Advanced Timing plugin example</title>
 <script>
 var CANVS = 1, WEBGL=2;
-var RENDER_MODE = CANVS;
+var RENDER_MODE = WEBGL;
 var BUNNY_COUNT = 200;
 </script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/phaser/2.6.2/phaser.js'></script>
