--- a/example/v2/cardcanvas.html
+++ b/example/v2/cardcanvas.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8">
     <title>Phaser2 Benchmark with Canvas</title>
     <meta name="twitter:card" content="player" />
-    <meta name="twitter:player" content="https://app.am1.jp/phaser-bench/v2/v2canvas.html" />
-    <meta name="twitter:site" content="https://app.am1.jp/" />
+    <meta name="twitter:site" content="@am1tanaka" />
     <meta name="twitter:title" content="Phaser2 benchmark with Canvas" />
-    <meta name="twitter:creator" content="@am1tanaka" />
     <meta name="twitter:description" content="Phaser2 Benchmark with Canvas." />
+    <meta name="twitter:image" content="https://app.am1.jp/phaser-bench/thumbs.png" />
+    <meta name="twitter:player" content="https://app.am1.jp/phaser-bench/v2/v2canvas.html" />
     <meta name="twitter:player:width" content="800" />
     <meta name="twitter:player:height" content="480" />
-    <meta name="twitter:image" content="https://app.am1.jp/phaser-bench/thumbs.png" />
+    <meta name="twitter:creator" content="@am1tanaka" />
 </head>
 <body>
+
+このページはPhaser2アプリのTwitter Playerのmetaタグページです。
+
 </body>
 </html>
